# sblex-fjall-morphology

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Makefile  README.md  cliff.toml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: check-python.yml  check-rust.yml  release.yml  rolling-rust.yml  test-python.yml  test-rust.yml
python/fjall_morphology/: __init__.py  _core.pyi
python/sblex_fjall_morphology/: __init__.py  _core.pyi
rust/fjall-morphology-core/: Cargo.toml
rust/fjall-morphology-core/src/: lib.rs
rust/fjall-morphology-python/: Cargo.toml
rust/fjall-morphology-python/src/: lib.rs
rust/sblex-fjall-morphology-core/: Cargo.toml
rust/sblex-fjall-morphology-core/src/: lib.rs
rust/sblex-fjall-morphology-core/tests/api/: main.rs
rust/sblex-fjall-morphology-core/tests/api/snapshots/: api__lookup__dväljs.snap  api__lookup_with_cont__dv.snap  api__lookup_with_cont__dväljs.snap
rust/sblex-fjall-morphology-python/: Cargo.toml
rust/sblex-fjall-morphology-python/src/: lib.rs
scripts/: transform_readme.py
src/: lib.rs
src/fjall_morphology/: __init__.py
tests/: test_api.py
tests/__snapshots__/test_api/: test_build_and_load_morphology.1.json  test_build_and_load_morphology.json
