[workspace]
resolver = "3"
members = [
    "rust/fjall-morphology-core",
    "rust/fjall-morphology-python",
]

[workspace.package]
name = "fjall_morphology"
version = "0.1.0"
edition = "2024"



[workspace.dependencies]
fjall-morphology-core = { path = "rust/fjall-morphology-core" }

fjall = "3.0.1"
fs-err = "3.2.2"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py310"] }
serde_json = "1.0.149"
