[workspace]
resolver = "3"
members = [
    "rust/sblex-fjall-morphology-core",
    "rust/sblex-fjall-morphology-python",
]

[workspace.package]
name = "sblex_fjall_morphology"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/spraakbanken/sblex-fjall-morphology"



[workspace.dependencies]
sblex-fjall-morphology-core = { path = "rust/sblex-fjall-morphology-core" }

fjall = "3.0.1"
fs-err = "3.2.2"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py310"] }
serde_json = "1.0.149"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
