[project]
name = "fjall-morphology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kristoffer Andersson", email = "kristoffer.andersson@gu.se" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fjall-morphology = "fjall_morphology:main"

[tool.maturin]
module-name = "fjall_morphology._core"
python-packages = ["fjall_morphology"]
python-source = "python"
manifest-path = "rust/fjall-morphology-python/Cargo.toml"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "rust/**/*.rs" },
    { file = "Cargo.toml" },
    { file = "rust/fjall-morphology-core/Cargo.toml" },
    { file = "rust/fjall-morphology-python/Cargo.toml" },
    { file = "Cargo.lock" }
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "syrupy>=5.0.0",
]
