[package]
name = "sblex-fjall-morphology-core"
version = "0.1.0"
edition = "2024"

[dependencies]
fjall = { workspace = true }
fs-err = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
exn = "0.2.1"
insta = { version = "1.46.1", features = ["json"] }
temp-dir = "0.1.16"
