[package]
name = "sblex-fjall-morphology-python"
version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
publish = false

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
sblex-fjall-morphology-core = { workspace = true }
pyo3 = { workspace = true }
